# Messenger

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  nginx.conf  pyproject.toml
messenger/core/: DTO.py  admin.py  consumers.py  forms.py  models.py  routing.py  serializers.py  services.py  urls.py  views.py
messenger/core/migrations/: 0001_initial.py  0002_rename_title_channel_description.py  0003_alter_message_file.py  0004_membership_last_read_message_pk.py  0005_alter_membership_last_read_message_pk.py
messenger/core/tests/: test_models.py  test_services.py  test_views.py
messenger/messenger/: asgi.py  settings.py  settings_docker.py  urls.py
messenger/static/js/: channel.js  main.js  search.js
messenger/static/js/components/: message.js
messenger/templates/: base.html  channel.html  channel_create.html  channel_join.html  dialog.html  home.html
messenger/templates/includes/: channels_panel.html  search_panel.html
messenger/templates/registration/: login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html
messenger/user/: forms.py  urls.py  views.py
