[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["PolyakovDmitry546 <polyakov1803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
channels = {extras = ["daphne"], version = "^4.0.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
