[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["PolyakovDmitry546 <polyakov1803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
channels = {extras = ["daphne"], version = "^4.0.0"}
pillow = "^9.5.0"
channels-redis = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
