[tool.poetry]
name = "messenger"
version = "0.1.0"
description = ""
authors = ["PolyakovDmitry546 <polyakov1803@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
channels = {extras = ["daphne"], version = "^4.0.0"}
pillow = "^9.5.0"
channels-redis = "^4.1.0"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.7"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.7.10"
pep8-naming = "^0.13.3"
flake8-commas = "^2.1.0"
flake8-import-order = "^0.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
